--- a/style.css
+++ b/style.css
@@ -3,53 +3,81 @@
   font-size: 0.5;
 }
 
-/* body {
-  background: url(images/films.jpg) no-repeat center center fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-} */
+body {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+}
 
 h2 {
   font-size: 1.5rem;
   color: #eb6440;
+  text-align: center;
+}
+
+h4 {
+  text-align: center;
+}
+
+small {
+  text-align: center;
+}
+
+.row a {
+  text-decoration: none;
+}
+
+.div {
+  transition: all 1s;
+}
+
+.hover-content {
+  opacity: 0;
+  color: red;
+  height: 0;
+}
+
+.card:hover .hover-content {
+  opacity: 1;
+  height: auto;
 }
 
 #movie-backdrop {
   max-width: 20%;
 }
 
-.container {
-  background: url(images/films.jpg) no-repeat center center fixed;
+.main-container {
+  background: url(/images/films.jpg) no-repeat center center fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 0px;
-  resize: both; 
+  background-position: center;
+}
+
+/*
+.container {
+   padding: 0px;
+  resize: both;
   display: grid;
   overflow: auto;
-  padding: 10px;
+  padding: 10px;  */
+/* grid-template-columns: repeat(3, minmax(0, 1fr));
+   justify-content: center;
+  column-gap: 10px;  */
+/* background: url(images/films.jpg) no-repeat center center fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; 
+  margin: 0px !important; 
+} */
+
+/* .another-Container {
+  display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  align-items: center;
   justify-content: center;
   column-gap: 10px;
+} */
 
-}
-
-
-.items {
-  grid-column:1/-1; /* take all the columns */
-  background: green;
-  display: grid; /* you can use "inherit" here */
-  grid-template-columns: repeat(auto-fit, 50px); /* you can use "inherit" here */
-  column-gap: 10px; /* you can use "inherit" here */
-  row-gap: 10px;
-}
-.item {
-  height: 50px;
-  width: 50px;
-  background: blue;
-}
-
-.container div {
+/*  .container div {
   font-size: 20px;
   margin: 10px;
   border-radius: 1rem;
@@ -58,12 +86,12 @@ h2 {
 .container h5 {
   font-size: 25px;
   text-align: center;
-  color:red;
+  color: red;
 }
 
 .card {
   width: auto;
-}
+} */
 
 #actors {
   margin: 24px 16px 0 0;
