--- a/style.css
+++ b/style.css
@@ -1,12 +1,101 @@
+@import url("https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap");
+
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-size: 0.5;
 }
 
-body {
-  margin: 0px;
-  padding: 0px;
+#logo {
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+  height: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+}
+
+nav {
   width: 100%;
+  height: 50px;
+  background-image: linear-gradient(#ffffff, rgb(150, 150, 150));
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  font-family: "Zen Dots", sans-serif;
+}
+
+#navbar {
+  display: flex;
+  height: 100%;
+  /* max-width: 1250px; */
+  width: 100%;
+  align-items: center;
+  margin: auto;
+  justify-content: space-between;
+
+  padding: 0 25px;
+}
+
+#nav-links {
+  display: flex;
+  line-height: 70px;
+  height: 100%;
+}
+
+#links {
+  display: flex;
+  align-items: center;
+  margin: 0;
+}
+
+#search-form {
+  display: flex;
+  align-items: center;
+}
+
+#li-nav {
+  position: relative;
+  display: flex;
+  /* width:auto ; */
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0 14px;
+  font-size: 13.5px;
+}
+
+#genre-btn{
+  height: 100%;
+  text-decoration: none;
+  /* white-space: nowrap; */
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: "Zen Dots", sans-serif;
+}
+
+.sub-menu{
+  position: absolute;
+  top: 70px;
+  left: 0;
+  list-style: none;
+  line-height: 40px;
+  transform: translateY(-3em);
+  background:rgb(150, 150, 150);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 4px 4px;
+  z-index: -1;
+  visibility: hidden;
+  transition: all 0.5s ease 0s,visibility 0s linear 0s,z-index 0s linear 0.01s;
+}
+
+#li-nav:hover .htmlCss-sub-menu{
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
+  transform: translateY(0);
+  transition-delay: 0s,0s,0.3s;
 }
 
 h2 {
@@ -15,20 +104,119 @@ h2 {
   text-align: center;
 }
 
-h4 {
+.main-container {
+  background: url(/images/films.jpg) no-repeat center center fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+
+/* .arrow {
+  height: 100%;
+  width: 22px;
+  line-height: 70px;
+  text-align: center;
+  display: inline-block;
+  color: #fff;
+  transition: 0.5s ease;
+}
+
+.sub-menu {
+  position: absolute;
+  top: 70px;
+  left: 0;
+  line-height: 40px;
+  transform: translateY(-3em);
+  background: #0d1d36;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 4px 4px;
+  z-index: -1;
+  visibility: hidden;
+  transition: all 0.5s ease 0s, visibility 0s linear 0s, z-index 0s linear 0.01s;
+}
+
+.htmlCss-sub-menu {
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
+  transform: translateY(0);
+  transition-delay: 0s, 0s, 0.3s;
+} */
+
+#search-input {
+  width: 200px;
+}
+
+h6 {
+  color: #eb6440;
   text-align: center;
 }
 
-small {
-  text-align: center;
+.footer{
+	background-color: #24262b;
+    padding: 20px 0;
+	margin-top: auto;
+	bottom: 0;
 }
-
-.row a {
-  text-decoration: none;
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
 }
-
-.div {
-  transition: all 1s;
+.footer-col h4{
+	font-size: 18px;
+	color: #ff7519;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -7px;
+	background-color: white;
+	height: 2px;
+	box-sizing: border-box;
+	width: 80px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+	color: #bbbbbb;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background-color: rgba(255,255,255,0.2);
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
+}
+.copyright{
+    background-color: #24262b;
+    color: #bbbbbb;
 }
 
 .hover-content {
@@ -42,71 +230,6 @@ small {
   height: auto;
 }
 
-#movie-backdrop {
-  max-width: 20%;
-}
-
-.main-container {
-  background: url(/images/films.jpg) no-repeat center center fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-/*
-.container {
-   padding: 0px;
-  resize: both;
-  display: grid;
-  overflow: auto;
-  padding: 10px;  */
-/* grid-template-columns: repeat(3, minmax(0, 1fr));
-   justify-content: center;
-  column-gap: 10px;  */
-/* background: url(images/films.jpg) no-repeat center center fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; 
-  margin: 0px !important; 
-} */
-
-/* .another-Container {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  justify-content: center;
-  column-gap: 10px;
-} */
-
-/*  .container div {
-  font-size: 20px;
-  margin: 10px;
-  border-radius: 1rem;
-}
-
-.container h5 {
-  font-size: 25px;
-  text-align: center;
-  color: red;
-}
-
 .card {
   width: auto;
-} */
-
-#actors {
-  margin: 24px 16px 0 0;
-}
-
-/* #genre-list-item {
-  position: relative;
-  display: inline-block;
-}
-
-#navbarDropdownMenuLink {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(8, 103, 210, 0.2);
-  z-index: 1;
-} */
+} 
