--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@
 
 nav {
   width: 100%;
-  height: 40px;
+  height: 50px;
   font-size: 14px;
-  background-image:  rgb(108, 108, 108);
+  background-image: rgb(108, 108, 108);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   font-family: "Zen Dots", sans-serif;
 }
 
 #searchBox {
-  width: 200px;
+  width: 150px;
   height: 35px;
 }
 
@@ -46,12 +46,22 @@ body {
   border-radius: 10px;
 }
 
+#navbarSupportedContent {
+  z-index: 1;
+}
 
 /* Body - Movies Cards */
 .hover-content {
+  position: absolute;
+  z-index: 20;
+  background: white;
+  padding: 30px 40px;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.27);
   opacity: 0;
   color: black;
-  height: 0;
+  width: 400px;
+  height: 20;
+  top: 150px;
 }
 
 .card:hover .hover-content {
